# ansible-playbooks

./: .gitignore  justfile  pyproject.toml  renovate.json  requirements.txt
.github/workflows/: test.yml
playbooks/: create-ansible-user.yml  deploy-server.yml
roles/common/tasks/: main.yml
roles/common/templates/: 00-banner.j2
roles/firewall/files/: 000-base.iptables  600-ssh.iptables  README
roles/firewall/filter_plugins/: parse_firewall_rules.py
roles/firewall/handlers/: main.yml
roles/firewall/tasks/: create_rule.yml  main.yml
roles/firewall/templates/: rule.iptables.j2  rule.j2
roles/ispmail/defaults/: main.yml
roles/ispmail/handlers/: main.yml
roles/ispmail/meta/: main.yml
roles/ispmail/tasks/: apache2.yml  dovecot.yml  ispmail_admin.yml  main.yml  postfix.yml  roundcube.yml  rspamd.yml  sympa.yml
roles/keycloak/files/: keycloak.service
roles/keycloak/tasks/: config.yml  install.yml  main.yml
roles/mail/defaults/: main.yml
roles/mail/handlers/: main.yml
roles/mail/tasks/: main.yml
roles/mail/templates/: 15-mailboxes.conf.j2  actions.conf.j2  classifier-bayes.conf.j2  main.cf.j2
roles/monitoring/defaults/: main.yml
roles/monitoring/meta/: main.yml
roles/monitoring/tasks/: main.yml
roles/monitoring/templates/: snmpd.conf.j2
roles/postgresql/defaults/: main.yml
roles/postgresql/handlers/: main.yml
roles/postgresql/tasks/: main.yml
roles/postgresql/templates/: ipsets.j2  pg_hba.conf.j2
roles/vault_agent/defaults/: main.yml
roles/vault_agent/tasks/: main.yml
roles/vault_agent/templates/: retrieving_cert.tmpl.j2
(+27 files in other folders)
