[project]
name = "ansible-playbooks"
version = "0.1.0"
requires-python = ">=3.13, <4"
dependencies = [
    "ansible==10.4.0",
    "hvac==2.4.0",
    # community.general.snmp_facts doesn't support pysnmp 6.0+
    # https://github.com/ansible-collections/community.general/issues/8852
    "pysnmp<6.0.0",
]

[dependency-groups]
dev = [
    "ansible-lint>=26.1.1",
    "ruff>=0.15.0",
    "ty>=0.0.16",
]
